samples/_failures_safe/1761602414_9119a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_992a18cc.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_992a18cc.c:160:16: error: missing terminating " character
  160 |         printf("Token %zu: %s ->
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_992a18cc.c:160:9: error: expected expression at end of input
  160 |         printf("Token %zu: %s ->
      |         ^~~~~~
./samples/SAFE/__tmp_992a18cc.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992a18cc.c:160:9: error: expected declaration or statement at end of input
